--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-reveal": "^1.2.2",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "typeit-react": "^2.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.68.0"
   }
 }
